--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul class="nav-links">
                    <li><a href="#home" class="active a scroll-link">HOME</a></li>
-                   <li><a href="#about" class="b scroll-link">WHO I AM</a></li>
+                   <li><a href="#about" class="b scroll-link">ABOUT</a></li>
                    <li><a href="#skills" class="c scroll-link">SKILLS</a></li>
                    <li><a href="#work" class="d scroll-link">WORK</a></li>
                    <li><a href="#contact" class="d scroll-link">CONTACT</a></li>
@@ -85,27 +85,27 @@
             <ul>
                 <li>
                     <div class="progress-badge"><h2>HTML5</h2><h2>95%</h2></div>
-                    <span class="bar"><span class="html" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="html" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>CSS3</h2><h2>92%</h2></div>
-                    <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>MEDIA QUERIES</h2><h2>84%</h2></div>
-                    <span class="bar"><span class="media-q" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="media-q" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>72%</h2></div>
-                    <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>JQUERY</h2><h2>75%</h2></div>
-                    <span class="bar"><span class="jquery" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="jquery" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>BOOTSTRAP</h2><h2>50%</h2></div>
-                    <span class="bar"><span class="bootstrap" data-aos="fade-right" data-aos-duration="2000"></span></span>
+                    <span class="bar"><span class="bootstrap" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
             </ul>    
         </div>
