--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                ABOUT
     ------------------------------>
     <div id="about">
-        <div class="about-cols">
-            <div class="about-desc" data-aos="fade-right" data-aos-duration="800">
+        <div class="about-cols" data-aos="fade-down" data-aos-duration="800">
+            <div class="about-desc">
                 <h1>About</h1>
                 <p>I'm Hafiz Anas a <span>Web Developer... <br>
                     Web development is the work involved in developing a Web site for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex Web-based Internet applications, electronic businesses, and social network services.
                 </p>
             </div>
-            <div class="basic-info" data-aos="fade-left" data-aos-duration="800">
+            <div class="basic-info">
                 <h1>BASIC INFORMATION</h1>
                 <div class="details">
                     <h1>Age: <span>20 years</span></h1>
@@ -80,7 +80,7 @@
                SKILLS
     ------------------------------>
     <div id="skills">
-        <div class="pro-skills">
+        <div class="pro-skills" data-aos="zoom-in" data-aos-duration="500">
             <h1>PROFESSIONAL SKILLS</h1>
             <ul>
                 <li>
