--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     <!----------------------------
+               PRELOADER
+    ------------------------------>
+    <div class="preloader">
+        <img src="Imgs/loading.gif">
+    </div>
+
+    <!----------------------------
                  HOME
     ------------------------------>
     <div id="home">
