--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a class="fb" href="https://www.facebook.com/anas.developor?ref=bookmarks" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a class="insta" href="https://www.instagram.com/chand__sethi/?hl=en" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
             <li><a class="git" href="https://github.com/Hafiz-Anas" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-            <li><a class="wtsp" href="https://www.whatsapp.com/features/" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+            <li><a class="wtsp" href="https://api.whatsapp.com/send?phone=+923037034307text=welcome%20to%20my%20whatsapp" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
         </ul>
     </div>    
     
@@ -277,7 +277,7 @@
                 <li><a class="insta" href="https://www.instagram.com/chand__sethi/?hl=en" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                 <li><a class="in" href="https://www.linkedin.com/in/hafiz-anas-764b5a1b3/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                 <li><a class="git" href="https://github.com/Hafiz-Anas" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                <li><a class="wtsp" href="https://api.whatsapp.com/send?phone=9237034307" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                <li><a class="wtsp" href="https://api.whatsapp.com/send?phone=+923037034307text=welcome%20to%20my%20whatsapp" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
             </ul>
             <p>Copyright © 2020 | Hafiz Anas</p>
             <p2> All rights reserved.</p2>
