Education Section added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="CSS/style.css">
+    <!--ANIMATION LINK-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--FONT AWESOME-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <title>Portfolio</title>
 </head>
 <body>
@@ -92,16 +95,16 @@
                     <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>MEDIA QUERIES</h2><h2>87%</h2></div>
-                    <span class="bar"><span class="media-q" data-aos="fade-right" data-aos-duration="1900"></span></span>
-                </li>
-                <li>
                     <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>72%</h2></div>
                     <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>JQUERY</h2><h2>70%</h2></div>
                     <span class="bar"><span class="jquery" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                </li>
+                <li>
+                    <div class="progress-badge"><h2>PHP</h2><h2>55%</h2></div>
+                    <span class="bar"><span class="php" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>BOOTSTRAP</h2><h2>50%</h2></div>
@@ -229,6 +232,60 @@
                 </div>
             </div>    
             <div class="more"><a href="">See More</a></div>     
+        </div>
+    </div>
+
+    <!----------------------------
+              EDUCATION
+    ------------------------------>
+    <div id="education">
+        <div class="container">
+            <h1>EDUCATION</h1>
+            <div class="courses">
+                <!-- <div class="course">
+                    <div class="during" data-aos="fade-right" data-aos-duration ="700">
+                        <span>2020 - 2024</span>
+                        <span>Graphic Design</span>
+                    </div>
+                    <div class="course-name" data-aos="fade-left" data-aos-duration ="700">
+                        <div class="active">
+                            <h2>B Des (Hons) Graphic Designing&nbsp;</h2>
+                            <div class="dot"></div>
+                        </div>
+                        <p>GIFT UNIVERSITY</a></p>
+                    </div>
+                </div> -->
+                <div class="course">
+                    <div class="during" data-aos="fade-right" data-aos-duration ="630">
+                        <span>2019 - 2020</span>
+                        <span>Web Developer</span>
+                    </div>
+                    <div class="course-name" data-aos="fade-left" data-aos-duration ="630">
+                        <h2>Custom Websites Development</h2>
+                        <p>A BEST GUIDENSS FROM MY COUSIN BROTHER <a href="http://hanzla.com/" target="blank">HANZLA.COM</a></p>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="during" data-aos="fade-right" data-aos-duration ="630">
+                        <span>2017 - 2019</span>
+                        <span>ICS</span>
+                    </div>
+                    <div class="course-name" data-aos="fade-left" data-aos-duration ="630">
+                        <h2>Intermediate of Computer Sciences ( ICS )</h2>
+                        <p>GOVT. DEGREE COLLEGE, GHAKHAR MANDI</p>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="during" data-aos="fade-right" data-aos-duration ="630">
+                        <span>2015 - 2017</span>
+                        <span>Matric</span>
+                    </div>
+                    <div class="course-name" data-aos="fade-left" data-aos-duration ="630">
+                        <h2>Normal School, Ghakhar Mandi</h2>
+                        <p>SCHOOL OF PUNJAB BOARD</p>                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
