--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     </div>
                     <div class="course-name" data-aos="fade-left" data-aos-duration ="700">
                         <h2>Intermediate of Computer Sciences ( ICS )</h2>
-                        <p>GOVT. DEGREE COLLEGE, GHAKHAR MANDI</p>
+                        <p>GOVT. DEGREE COLLEGE, GHAKHAR, PAKISTAN</p>
                     </div>
                 </div>
                 <div class="course">
@@ -281,7 +281,7 @@
                         <span>Matric</span>
                     </div>
                     <div class="course-name" data-aos="fade-left" data-aos-duration ="700">
-                        <h2>Normal School, Ghakhar Mandi</h2>
+                        <h2>Normal School, Ghakhar, Pakistan</h2>
                         <p>SCHOOL OF PUNJAB BOARD</p>                        </p>
                     </div>
                 </div>
