--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-6">
                             <div class="overlay">
-                                <a href="https://flamboyant-yalow-1c27a8.netlify.app/">View</a>
+                                <a href="https://flamboyant-yalow-1c27a8.netlify.app/" target= "blank">View</a>
                             </div>    
                         </div>
                     </div>    
@@ -186,7 +186,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-5">
                             <div class="overlay">
-                                <a href="https://loving-mayer-16de82.netlify.app/">View</a>
+                                <a href="https://loving-mayer-16de82.netlify.app/" target= "blank">View</a>
                             </div>    
                         </div>
                     </div>    
@@ -198,7 +198,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-7">
                             <div class="overlay">
-                                <a href="https://lucid-kilby-2575d7.netlify.app/">View</a>
+                                <a href="https://lucid-kilby-2575d7.netlify.app/" target= "blank">View</a>
                             </div>    
                         </div>
                     </div>    
@@ -210,7 +210,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-8">
                             <div class="overlay">
-                                <a href="https://quizzical-swartz-a3dd89.netlify.app/">View</a>
+                                <a href="https://quizzical-swartz-a3dd89.netlify.app/" target= "blank">View</a>
                             </div>    
                         </div>
                     </div>    
@@ -222,7 +222,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-9">
                             <div class="overlay">
-                                <a href="https://dazzling-tereshkova-517638.netlify.app/">View</a>
+                                <a href="https://dazzling-tereshkova-517638.netlify.app/" target= "blank">View</a>
                             </div>    
                         </div>
                     </div>    
@@ -261,7 +261,7 @@
                         <span>Web Developer</span>
                     </div>
                     <div class="course-name" data-aos="fade-left" data-aos-duration ="700">
-                        <h2>Custom Websites Development</h2>
+                        <h2>Websites Development</h2>
                         <p>A BEST GUIDENSS FROM MY COUSIN BROTHER <a href="http://hanzla.com/" target="blank">HANZLA.COM</a></p>
                     </div>
                 </div>
