skills section updated

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
                     <span class="bar"><span class="jquery" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>PHP</h2><h2>55%</h2></div>
-                    <span class="bar"><span class="php" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>70%</h2></div>
+                    <span class="bar"><span class="typescript" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>BOOTSTRAP</h2><h2>50%</h2></div>
-                    <span class="bar"><span class="bootstrap" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>PHP</h2><h2>55%</h2></div>
+                    <span class="bar"><span class="php" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
             </ul>    
         </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="course-name" data-aos="fade-left" data-aos-duration ="700">
                         <h2>Websites Development</h2>
-                        <p>A BEST GUIDENSS FROM MY COUSIN BROTHER <a href="http://hanzla.com/" target="blank">HANZLA.COM</a></p>
+                        <p>A BEST GUIDANCE FROM MY COUSIN BROTHER <a href="http://hanzla.com/" target="blank">HANZLA</a></p>
                     </div>
                 </div>
                 <div class="course">
