--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-2">
                             <div class="overlay">
-                                <a href="https://nostalgic-kare-b65e5f.netlify.app/" target="blank">View</a>
+                                <a href="https://hopeful-dijkstra-cded92.netlify.app/" target="blank">View</a>
                             </div>    
                         </div>    
                     </div>
