--- a/index.html
+++ b/index.html
@@ -95,19 +95,19 @@
                     <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>72%</h2></div>
+                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>60%</h2></div>
                     <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>JQUERY</h2><h2>70%</h2></div>
-                    <span class="bar"><span class="jquery" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>BOOTSTRAP</h2><h2>55%</h2></div>
+                    <span class="bar"><span class="bootstrap" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>70%</h2></div>
+                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>25%</h2></div>
                     <span class="bar"><span class="typescript" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>PHP</h2><h2>55%</h2></div>
+                    <div class="progress-badge"><h2>PHP</h2><h2>20%</h2></div>
                     <span class="bar"><span class="php" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
             </ul>    
