--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="about-cols" data-aos="fade-down" data-aos-duration="800">
             <div class="about-desc">
                 <h1>About</h1>
-                <p>I'm Hafiz Anas a <span>Web Developer... <br>
+                <p>I'm Hafiz Anas, A <span>Web Developer... <br>
                     Web development is the work involved in developing a Web site for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex Web-based Internet applications, electronic businesses, and social network services.
                 </p>
             </div>
@@ -72,7 +72,7 @@
                     <h1>Age: <span>20 years</span></h1>
                     <h1>Email:<span> hafizanas663@gmail.com</span></h1>
                     <h1>Phone: <span>+(92) 303 703 4307</span></h1>
-                    <h1>Address: <span>Rahwali Cantt, Gujranwala Pakistan</span></h1>
+                    <h1>Address: <span>Rahwali Cantt, Gujranwala, Pakistan</span></h1>
                     <h1>Languages: <span> English, Urdu, Punjabi</span></h1>
                 </div> 
             </div>
@@ -91,20 +91,20 @@
                     <span class="bar"><span class="html" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>CSS3</h2><h2>92%</h2></div>
+                    <div class="progress-badge"><h2>CSS3</h2><h2>93%</h2></div>
                     <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>60%</h2></div>
+                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>65%</h2></div>
                     <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>BOOTSTRAP</h2><h2>65%</h2></div>
-                    <span class="bar"><span class="bootstrap" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>REACT.JS</h2><h2>45%</h2></div>
+                    <span class="bar"><span class="reactJs" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>25%</h2></div>
-                    <span class="bar"><span class="typescript" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>30%</h2></div>
+                    <span class="bar"><span class="ts" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
                     <div class="progress-badge"><h2>PHP</h2><h2>20%</h2></div>
