Social links updated

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <ul class="social-contact">
             <li><a class="fb" href="https://www.facebook.com/anas.developor?ref=bookmarks" target="blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
             <li><a class="insta" href="https://www.instagram.com/chand__sethi/?hl=en" target="blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+            <li><a class="in" href="https://www.linkedin.com/in/hafiz-anas-764b5a1b3/" target="blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
             <li><a class="git" href="https://github.com/Hafiz-Anas" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             <li><a class="wtsp" href="https://api.whatsapp.com/send?phone=+923037034307text=welcome%20to%20my%20whatsapp" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
         </ul>
@@ -293,10 +294,10 @@
                CONTACT
     ------------------------------>
     <div id="contact">
-        <div class="contact-container" data-aos="zoom-in" data-aos-duration="500">
+        <div class="contact-container">
             <h1>Contact Me</h1>
             <div class="contact-cols">
-                <form action="#">
+                <form action="#" data-aos="fade-right" data-aos-duration ="750">
                     <label for="name">
                         <span><i class="fa fa-user-circle" aria-hidden="true"></i></span>
                         <input type="text" class="input" placeholder="Name">
@@ -312,7 +313,7 @@
                     <textarea rows="6" class="input" placeholder="Massage"></textarea><br>
                     <button type="submit" class="submit" >Send</button>
                 </form>
-                <div class="addres">
+                <div class="address" data-aos="fade-left" data-aos-duration ="750">
                     <p><strong>Address </strong></p>
                     <p>Gujranwala, Rahwali Cantt, Pakistan</p>
                     <p><strong>Phone</strong></p>
