--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         <div class="contact-container">
             <h1>Contact Me</h1>
             <div class="contact-cols">
-                <form action="#" data-aos="fade-right" data-aos-duration ="750">
+                <form action="#">
                     <label for="name">
                         <span><i class="fa fa-user-circle" aria-hidden="true"></i></span>
                         <input type="text" class="input" placeholder="Name">
@@ -313,7 +313,7 @@
                     <textarea rows="6" class="input" placeholder="Massage"></textarea><br>
                     <button type="submit" class="submit" >Send</button>
                 </form>
-                <div class="address" data-aos="fade-left" data-aos-duration ="750">
+                <div class="address">
                     <p><strong>Address </strong></p>
                     <p>Gujranwala, Rahwali Cantt, Pakistan</p>
                     <p><strong>Phone</strong></p>
