link added to Todo App

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="item-img-sec">
                         <div class="item-img item-img-2">
                             <div class="overlay">
-                                <a href="#" target="blank">View</a>
+                                <a href="https://hopeful-dijkstra-cded92.netlify.app/" target="blank">View</a>
                             </div>    
                         </div>    
                     </div>
