--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="line-1"></div>
                     <div class="line-2"></div>
                     <div class="line-3"></div>
-                </div> 
+                </div>
             </nav>
             <div class="mid-section">
                <img src="Imgs/profile.jpg">
@@ -54,8 +54,8 @@
             <li><a class="git" href="https://github.com/Hafiz-Anas" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
             <li><a class="wtsp" href="https://api.whatsapp.com/send?phone=+923037034307text=welcome%20to%20my%20whatsapp" target="blank"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
         </ul>
-    </div>    
-    
+    </div>
+
     <!----------------------------
                ABOUT
     ------------------------------>
@@ -70,16 +70,16 @@
             <div class="basic-info">
                 <h1>BASIC INFORMATION</h1>
                 <div class="details">
-                    <h1>Age: <span>20 years</span></h1>
+                    <h1>Age: <span>22 years</span></h1>
                     <h1>Email:<span> hafizanas663@gmail.com</span></h1>
                     <h1>Phone: <span>+(92) 303 703 4307</span></h1>
-                    <h1>Address: <span>Rahwali Cantt, Gujranwala, Pakistan</span></h1>
+                    <h1>Address: <span>Johar Town, Lahore, Pakistan</span></h1>
                     <h1>Languages: <span> English, Urdu, Punjabi</span></h1>
-                </div> 
+                </div>
             </div>
-        </div>    
+        </div>
     </div>
- 
+
     <!-----------------------------
                SKILLS
     ------------------------------>
@@ -88,30 +88,30 @@
             <h1>PROFESSIONAL SKILLS</h1>
             <ul>
                 <li>
-                    <div class="progress-badge"><h2>HTML5</h2><h2>95%</h2></div>
+                    <div class="progress-badge"><h2>HTML&CSS</h2><h2>95%</h2></div>
                     <span class="bar"><span class="html" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>CSS3</h2><h2>93%</h2></div>
-                    <span class="bar"><span class="css" data-aos="fade-right" data-aos-duration="1900"></span></span>
-                </li>
-                <li>
-                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>65%</h2></div>
+                    <div class="progress-badge"><h2>JAVASCRIPT</h2><h2>85%</h2></div>
                     <span class="bar"><span class="js" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>REACT.JS</h2><h2>45%</h2></div>
+                    <div class="progress-badge"><h2>REACT.JS</h2><h2>95%</h2></div>
                     <span class="bar"><span class="reactJs" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>30%</h2></div>
+                    <div class="progress-badge"><h2>TYPESCRIPT</h2><h2>90%</h2></div>
                     <span class="bar"><span class="ts" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
                 <li>
-                    <div class="progress-badge"><h2>PHP</h2><h2>20%</h2></div>
-                    <span class="bar"><span class="php" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                    <div class="progress-badge"><h2>REDUX TOOLKIT</h2><h2>90%</h2></div>
+                    <span class="bar"><span class="redux" data-aos="fade-right" data-aos-duration="1900"></span></span>
                 </li>
-            </ul>    
+                <li>
+                    <div class="progress-badge"><h2>NODE.JS</h2><h2>40%</h2></div>
+                    <span class="bar"><span class="node" data-aos="fade-right" data-aos-duration="1900"></span></span>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -120,7 +120,7 @@
     ------------------------------>
     <div id="work">
         <div class="container">
-            <h1>MY WORK</h1>   
+            <h1>MY WORK</h1>
             <p>“We love what we do and we do what our clients love & work with great clients all over the world to create thoughtful and purposeful websites.”</p>
             <div class="items">
                 <div class="item" data-aos="flip-down" data-aos-duration="800">
@@ -129,7 +129,7 @@
                             <div class="overlay">
                                 <a href="https://heuristic-swanson-5272ca.netlify.app/" target="blank">View</a>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <div class="title">
                         <span class="hide"><</span>Charity Home<span class="hide">/></span>
@@ -140,9 +140,9 @@
                         <div class="item-img item-img-6">
                             <div class="overlay">
                                 <a href="https://flamboyant-yalow-1c27a8.netlify.app/" target= "blank">View</a>
-                            </div>    
+                            </div>
                         </div>
-                    </div>    
+                    </div>
                     <div class="title">
                         <span class="hide"><</span>Stability<span class="hide">/></span>
                     </div>
@@ -153,7 +153,7 @@
                             <div class="overlay">
                                 <a href="https://eloquent-sammet-11cf2e.netlify.app/" target="blank">View</a>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                     <div class="title">
                         <span class="hide"><</span>JS TypeWriter<span class="hide">/></span>
@@ -164,8 +164,8 @@
                         <div class="item-img item-img-4">
                             <div class="overlay">
                                 <a href="https://nervous-dijkstra-2f9a2a.netlify.app/" target="blank">View</a>
-                            </div>    
-                        </div>    
+                            </div>
+                        </div>
                     </div>
                     <div class="title">
                         <span class="hide"><</span>Education<span class="hide">/></span>
@@ -176,8 +176,8 @@
                         <div class="item-img item-img-2">
                             <div class="overlay">
                                 <a href="https://hopeful-dijkstra-cded92.netlify.app/" target="blank">View</a>
-                            </div>    
-                        </div>    
+                            </div>
+                        </div>
                     </div>
                     <div class="title">
                         <span class="hide"><</span>Todo List<span class="hide">/></span>
@@ -188,9 +188,9 @@
                         <div class="item-img item-img-5">
                             <div class="overlay">
                                 <a href="https://loving-mayer-16de82.netlify.app/" target= "blank">View</a>
-                            </div>    
+                            </div>
                         </div>
-                    </div>    
+                    </div>
                     <div class="title">
                         <span class="hide"><</span>Blogger<span class="hide">/></span>
                     </div>
@@ -200,9 +200,9 @@
                         <div class="item-img item-img-7">
                             <div class="overlay">
                                 <a href="https://lucid-kilby-2575d7.netlify.app/" target= "blank">View</a>
-                            </div>    
+                            </div>
                         </div>
-                    </div>    
+                    </div>
                     <div class="title">
                         <span class="hide"><</span>Developers<span class="hide">/></span>
                     </div>
@@ -212,9 +212,9 @@
                         <div class="item-img item-img-8">
                             <div class="overlay">
                                 <a href="https://quizzical-swartz-a3dd89.netlify.app/" target= "blank">View</a>
-                            </div>    
+                            </div>
                         </div>
-                    </div>    
+                    </div>
                     <div class="title">
                         <span class="hide"><</span>Password Generator<span class="hide">/></span>
                     </div>
@@ -224,15 +224,15 @@
                         <div class="item-img item-img-9">
                             <div class="overlay">
                                 <a href="https://dazzling-tereshkova-517638.netlify.app/" target= "blank">View</a>
-                            </div>    
+                            </div>
                         </div>
-                    </div>    
+                    </div>
                     <div class="title">
                         <span class="hide"><</span>Island Adventures<span class="hide">/></span>
                     </div>
                 </div>
-            </div>    
-            <div class="more"><a href="">See More</a></div>     
+            </div>
+            <div class="more"><a href="">See More</a></div>
         </div>
     </div>
 
@@ -315,15 +315,15 @@
                 </form>
                 <div class="address">
                     <p><strong>Address </strong></p>
-                    <p>Gujranwala, Rahwali Cantt, Pakistan</p>
+                    <p>Johar Town, Lahore, Pakistan</p>
                     <p><strong>Phone</strong></p>
                     <p>+(92) 303 703 4307</p>
                     <p><strong>Email</strong></p>
                     <p>hafizanas663@gmail.com</p>
                 </div>
-            </div>    
+            </div>
         </div>
-    </div> 
+    </div>
 
     <!-----------------------------
                FOOTER
